--- a/about.html
+++ b/about.html
@@ -15,16 +15,13 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>千淘万漉虽辛苦，吹尽狂沙始到金</p></blockquote>
 
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>hey，我是<strong>孙玉庆</strong>，一个刚刚工作的webgis程序员，现居济南</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
+    <p>这是我利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。
+    <p>在此鸣谢<a href="https://github.com/qiubaiying">GitHub·BY</a>的开源模版</p>
     
     <h5>Talks</h5>
 
@@ -107,11 +104,11 @@ header-img: "img/post-bg-rwd.jpg"
 <div id="gitalk-container"></div>
     <script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '{{site.gitalk.clientID}}',
-    clientSecret: '{{site.gitalk.clientSecret}}',
-    repo: '{{site.gitalk.repo}}',
-    owner: '{{site.gitalk.owner}}',
-    admin: ['{{site.gitalk.admin}}'],
+    clientID: '97051cae10ef987ebf47',
+    clientSecret: '3c2e7e1c0783395f43cb43b1b0d03dc64e1b1b57',
+    repo: 'ssssssu.github.io',
+    owner: 'ssssssu',
+    admin: ['ssssssu'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
     id: 'about',
     });
