--- a/about.html
+++ b/about.html
@@ -104,11 +104,11 @@ header-img: "img/post-bg-rwd.jpg"
 <div id="gitalk-container"></div>
     <script type="text/javascript">
     var gitalk = new Gitalk({
-    clientID: '97051cae10ef987ebf47',
-    clientSecret: '3c2e7e1c0783395f43cb43b1b0d03dc64e1b1b57',
-    repo: 'ssssssu.github.io',
-    owner: 'ssssssu',
-    admin: ['ssssssu'],
+   clientID: '{{site.gitalk.clientID}}',
+    clientSecret: '{{site.gitalk.clientSecret}}',
+    repo: '{{site.gitalk.repo}}',
+    owner: '{{site.gitalk.owner}}',
+    admin: ['{{site.gitalk.admin}}'],
     distractionFreeMode: {{site.gitalk.distractionFreeMode}},
     id: 'about',
     });
